Fixes #1811: inventory: Borked interface
In inventory module:

 * Table element overflows from page, fixed after reading this:
   http://www.alsacreations.com/tuto/lire/1038-gerer-debordement-
   contenu-et-cesures-css.html
 * If a machine has many IP adresses, they are stored in database like this:
   x.x.x.x/x.x.x.x/x.x.x.x (separated by slashes), these adresses
   overflows in table, so PHP-replace '/' by "\r\n"
 * All titles in table header comes from database table names, some are
   very long and overflow: fixed by PHP-replace db table names by
   human-friendly names

--- a/web/graph/global.css
+++ b/web/graph/global.css
@@ -1006,11 +1006,19 @@ li.empty a {
     width: 99%;
 }
 
+/*
+ * word-wrap values: normal and break-word
+ * word-wrap is replaced by overflow-wrap since 2012
+ */
 #section table.listinfos {
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
+    table-layout: fixed;
     border: 1px solid #CCCCCC;
     border-top: 0px;
     margin-bottom: 0.5em;
     margin-top: 0.5em;
+    width: 101%;
 }
 
 
